--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory       = /home/ec2-user/git-repos/ansible-practice/inventory.yml
+inventory       = /home/ec2-user/git-repos/ansible-practice/inventory/hosts
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 #remote_tmp      = ~/.ansible/tmp
